--- a/personal-budget-manager/src/App.css
+++ b/personal-budget-manager/src/App.css
@@ -33,11 +33,16 @@ h2 {
 }
 
 .btn-primary {
-  background-color: #007bff;
-  border-color: #007bff;
+  background-color: #28a745;
+  border-color: #28a745;
 }
 
 .btn-success {
+  background-color: #28a745;
+  border-color: #28a745;
+}
+
+.btn-okay {
   background-color: #28a745;
   border-color: #28a745;
 }
