--- a/personal-budget-manager/src/components/css/ExpenseForm.css
+++ b/personal-budget-manager/src/components/css/ExpenseForm.css
@@ -1,4 +1,3 @@
-/* Container styling */
 .container {
     max-width: 600px;
     margin: 0 auto;
@@ -20,7 +19,7 @@ label {
     color: #555;
 }
   
-/* Input styling */
+
 .form-control {
     border-radius: 5px;
     box-shadow: none;
@@ -33,12 +32,12 @@ label {
     margin-bottom: 30px;
 }
   
-/* Button group styling */
+
 .button-group {
-    margin-top: 0px; /* Added margin to create space between form and buttons */
+    margin-top: 0px; /
 }
   
-/* Button styling */
+
 .btn {
     width: 100%;
     padding: 10px;
@@ -65,12 +64,12 @@ label {
     background-color: #0056b3;
 }
   
-/* Form spacing */
+
 .mb-3 {
     margin-bottom: 20px;
 }
   
-/* Link container */
+
 .d-flex {
     justify-content: space-between;
 }
